--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.table, th, td {
+  border: 1px dotted rgb(247, 171, 78);
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
+.table{
+  border: 9px solid rgb(0, 0, 0);
+  max-width: 100%;
+  max-height: 100%;
+  text-align: center;
+  margin: 50px;
 
-.App-link {
-  color: #61dafb;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px;
+
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container{
+  text-align: center;
+  width: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 150px;
+  
 }
